# juhlakalu

./: .env.example  .gitignore  .test.env  Cargo.toml  LICENSE.md  Makefile  README.md  jest.config.js  package.json  tsconfig.json
backend/migrations/: create_tables.sql  drop_tables.sql  schema.sql
backend/migrations/fixtures/: initial.sql  tests.sql
backend/src/: auth.rs  config.rs  database.rs  errors.rs  main.rs  tests.rs  users.rs  validation.rs
backend/src/compos/: database.rs  mod.rs  types.rs
backend/src/database/: client.rs  mod.rs  pool.rs  transaction.rs
frontend/e2e-tests/: preset.js  run.sh  testApi.ts  utils.ts
frontend/e2e-tests/tests/: login.test.ts  login.test.tsx
frontend/e2e-tests/tests/views/: AppBar.ts  (+3 more)
frontend/src/: Login.tsx  index.html  index.tsx
frontend/src/api/: api.ts  apiFetch.ts  apiHooks.ts
frontend/src/components/: MainAppBar.tsx
frontend/src/rust-types/: Compo.ts  CompoState.ts  CompoUpdate.ts  ErrorCode.ts  ErrorMessage.ts  NewUser.ts  User.ts
frontend/src/state/: AppState.tsx  TaskState.tsx  asyncState.tsx  storeContext.tsx  useBool.ts  useOnChange.ts  useOnMount.tsx  useStore.ts
frontend/src/style/: colors.less  size.less  typography.less
frontend/src/utils/: arrays.ts  conversions.ts  either.ts  forms.test.ts  forms.ts  objects.test.ts  objects.ts  options.ts  plainComponent.tsx  requiresAdminRole.tsx  strings.ts  types.ts  useForm.ts  validators.ts
frontend/testUtils/: initTest.ts  run.sh  testApi.ts
migrations/: schema.sql
src/: auth.rs  database.rs  errors.rs  main.rs  users.rs
static/: index.html
(+33 files in other folders)
