[package]
name = "juhlakalu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-session = "0.4.0"
actix-files = "0.5.0"
serde = { version = "1.0", features = ["derive"] }

# Configuration
config = "0.10.1"
dotenv = "0.15.0"

# Database
deadpool-postgres = "0.5.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"

# Utils
derive_more = "0.99.2"
